--- a/calc.css
+++ b/calc.css
@@ -182,3 +182,22 @@ justify-content: flex-start;
     width: 100%;
 }
 
+.mb {
+    displaY: none;
+}
+
+@media(max-width: 800px) {
+    .hideOnMobile{
+        display: none;
+    }
+}
+
+.mb {
+    display: block;
+}
+
+@media(max-width: 400px) {
+    .sidebar{
+        width: 100%;
+    }
+}
