--- a/originabout.css
+++ b/originabout.css
@@ -100,3 +100,23 @@ justify-content: flex-start;
 .sidebar a {
     width: 100%;
 }
+
+.mb {
+    displaY: none;
+}
+
+@media(max-width: 800px) {
+    .hideOnMobile{
+        display: none;
+    }
+}
+
+.mb {
+    display: block;
+}
+
+@media(max-width: 400px) {
+    .sidebar{
+        width: 100%;
+    }
+}
